// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog rendering renders expected elements 1`] = `
<div
  className="Dialog__backdrop"
>
  <div
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog TestClass"
    id="test-dialog"
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__title"
        id="dialogTitle"
      >
        Test
      </div>
      <div
        className="TestClass Dialog__body"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          size="medium"
          text="A"
        />
      </div>
    </React.Fragment>
  </div>
</div>
`;

exports[`Dialog rendering renders expected elements when child has no className 1`] = `
<div
  className="Dialog__backdrop"
>
  <div
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog"
    id="test-dialog"
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__title"
        id="dialogTitle"
      >
        Test
      </div>
      <div
        className="Dialog__body"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          size="medium"
          text="A"
        />
      </div>
    </React.Fragment>
  </div>
</div>
`;

exports[`Dialog rendering renders expected elements when onSubmit is set 1`] = `
<div
  className="Dialog__backdrop"
>
  <form
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog"
    id="test-dialog"
    onSubmit={[Function]}
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__title"
        id="dialogTitle"
      >
        Test
      </div>
      <div
        className="TestClass Dialog__body"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          size="medium"
          text="A"
        />
      </div>
    </React.Fragment>
  </form>
</div>
`;
